# pretix-hide-sold-out

./: .update-locales.sh  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_hide_sold_out/: __init__.py  apps.py
pretix_hide_sold_out/management/commands/: hide_sold_out.py
