[project]
name = "pretix-hide-sold-out"
dynamic = ["version"]
description = "Hide sold out events"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_hide_sold_out = "pretix_hide_sold_out:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix-unofficial/pretix-hide-sold-out"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_hide_sold_out.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
